# katana-document-viewer

./: .gitignore  Cargo.toml  Justfile  README.md  handoff-kdv-v0.2.0-viewer-recovery-2026-06-13.md  handoff-kdv-v0.2.0-work-instruction-2026-06-13.md  lefthook.yml
crates/katana-document-preview-egui/: Cargo.toml
crates/katana-document-preview-egui/src/: lib.rs
crates/katana-document-viewer/: Cargo.toml
crates/katana-document-viewer/examples/: export_debug.rs
crates/katana-document-viewer/examples/export_debug/: args.rs  args_tests.rs
crates/katana-document-viewer/fixtures/rendering/: commonmark.md  external-failure.md  external-success.md  gfm.md  katana-compat.md  math.md  sample.ja.md
crates/katana-document-viewer/src/: artifact.rs  artifact_tests.rs  browser_session.rs  browser_session_adapter_tests.rs  browser_session_command_queue.rs  browser_session_runtime.rs  browser_session_state.rs  browser_session_state_tests.rs  browser_session_tests.rs  browser_session_types.rs  browser_session_types_tests.rs  browser_session_worker.rs  browser_session_worker_coalescing_tests.rs  browser_session_worker_tests.rs  cli_api.rs  cli_api_tests.rs  dependency_tests.rs  document.rs  document_tests.rs  emoji_text.rs  evaluation.rs  evaluation_coverage.rs  evaluation_fixtures.rs  evaluation_kmm_tests.rs  evaluation_tests.rs  export_assets_tests.rs  export_block_payload.rs  export_code_payload.rs  export_contract.rs  export_contract_entries.rs  export_contract_tests.rs  export_details_payload.rs  export_footnote_payload.rs  export_heading_payload.rs  export_html_code_contract_tests.rs  export_html_contract_test_support.rs  export_html_math_contract_tests.rs  export_html_ops.rs  export_html_payload.rs  export_html_payload_tests.rs  (+50 more)
crates/katana-document-viewer/src/artifact/: factory.rs
crates/katana-document-viewer/src/backend/: diagram.rs  math.rs  mod.rs
crates/katana-document-viewer/src/export_assets/: mod.rs
crates/katana-document-viewer/src/export_html/: export_block_payload.rs  export_block_payload_tests.rs  export_code_payload.rs  export_details_payload.rs  export_footnote_payload.rs  export_heading_payload.rs  export_heading_payload_tests.rs  export_html_code_contract_tests.rs  export_html_contract_test_support.rs  export_html_math_contract_tests.rs  export_html_ops.rs  export_html_payload.rs  export_html_payload_nodes.rs  export_html_payload_nodes_tests.rs  export_html_payload_test_modules.rs  export_html_payload_tests.rs  export_html_payload_tests_basic.rs  export_html_payload_tests_media.rs  export_html_payload_tests_support.rs  export_html_payload_unit_tests.rs  export_html_red_contract_tests.rs  export_html_sample_fixture_tests.rs  export_html_structure_contract_tests.rs  export_html_structure_contract_tests_blockquote.rs  export_html_structure_contract_tests_details.rs  export_html_style.rs  export_html_table_contract_tests.rs  export_html_theme_contract_tests.rs  export_html_visual_contract_tests.rs  export_html_visual_contract_tests_alert.rs  export_html_visual_contract_tests_style.rs  export_inline_payload.rs  export_inline_payload_autolink.rs  export_inline_payload_basic_tests.rs  export_inline_payload_footnote_tests.rs  export_inline_payload_node_tests.rs  export_inline_payload_tests.rs  export_legacy_note_payload.rs  export_list_payload.rs  export_list_payload_tests.rs  (+4 more)
crates/katana-document-viewer/src/export_payload/: document.rs  document_helpers.rs  document_helpers_content.rs  document_helpers_xref.rs  document_tests.rs  export_image_payload.rs  export_payload.rs  export_payload_contract_tests.rs  export_payload_contract_tests_cases.rs  export_payload_contract_tests_cases_annotations.rs  export_payload_contract_tests_cases_export_fidelity.rs  export_payload_contract_tests_cases_japanese.rs  export_payload_contract_tests_cases_wrapped_links.rs  export_payload_contract_tests_support.rs  export_payload_contract_tests_support_markdowns.rs  export_payload_contract_tests_support_tests.rs  export_pdf_payload.rs
crates/katana-document-viewer/src/export_postprocess/: adapter.rs  contract.rs  mod.rs  policy.rs  service.rs  test_pdf_fixture.rs  test_support.rs  tests.rs  types.rs
crates/katana-document-viewer/src/export_quality/: html_score.rs  html_score_direct_svg_tests.rs  html_score_direct_visual.rs  html_score_direct_visual_diagram_tests.rs  html_score_direct_visual_helper_tests.rs  html_score_direct_visual_image_media_tests.rs  html_score_direct_visual_img.rs  html_score_direct_visual_img_tests.rs  html_score_direct_visual_path_tests.rs  html_score_direct_visual_source.rs  html_score_direct_visual_source_tests.rs  html_score_direct_visual_svg.rs  html_score_direct_visual_tests.rs  html_score_markdown.rs  (+54 more)
crates/katana-document-viewer/tests/: browser_session_adapter_contract.rs  export_artifacts_e2e.rs  export_artifacts_e2e_direct_visual.rs
crates/katana-markdown-preview/: Cargo.toml
crates/katana-markdown-preview-egui/: Cargo.toml
crates/katana-markdown-preview-egui/src/: lib.rs
crates/katana-markdown-preview/src/: lib.rs
tools/kdv-storybook/: Cargo.toml
tools/kdv-storybook/src/: args.rs  canvas.rs  catalog.rs  document_viewer.rs  document_viewer_node_contract_tests.rs  document_viewer_tests.rs  frame.rs  frame_alert_contract_tests.rs  frame_hover.rs  frame_html_alignment_support.rs  frame_html_alignment_tests.rs  frame_interaction_tests.rs  frame_media_control_tests.rs  frame_performance_tests.rs  frame_pixel_guard.rs  frame_preview_pixels.rs  frame_role_pixel_case.rs  frame_role_pixel_tests.rs  frame_score_preview_crop_tests.rs  frame_score_visual_tests.rs  frame_scroll_tests.rs  frame_sidebar_tests.rs  frame_status.rs  frame_surface_content_bounds.rs  frame_surface_dump.rs  frame_surface_foreground.rs  frame_surface_parity_tests.rs  frame_surface_pixels.rs  frame_surface_row_alignment.rs  frame_surface_similarity.rs  frame_surface_similarity_tests.rs  frame_task_state_tests.rs  frame_test_modules.rs  frame_tests.rs  frame_theme_token_tests.rs  frame_ui_surface.rs  interaction_keys.rs  layout.rs  main.rs  media_host_action.rs  (+99 more)
(+821 files in other folders)
