[workspace]
members = [
    "crates/kdv-linter",
    "crates/katana-document-viewer",
    "tools/kdv-storybook",
]
resolver = "2"

[workspace.package]
version = "0.3.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/HiroyukiFuruno/katana-document-viewer"
rust-version = "1.95.0"
authors = ["Hiroyuki Furuno"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
emojis = "0.9"
epaint_default_fonts = "0.35"
thiserror = "2"
katana-markdown-model = "0.2.1"
katana-render-runtime = "0.4.5"
katana-ui-core = { git = "https://github.com/HiroyukiFuruno/katana-ui-core.git", tag = "v0.1.4" }
katana-ui-core-storybook = { git = "https://github.com/HiroyukiFuruno/katana-ui-core.git", tag = "v0.1.4" }
serde_json = "1"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
cosmic-text = "0.19"
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
minifb = "0.28"
resvg = "0.47"
tiny-skia = "0.12"
ignore = "0.4"
proc-macro2 = { version = "1", features = ["span-locations"] }
katana-ast-lint = "0.5.1"
syn = { version = "2", features = ["full", "visit"] }
toml = "1.1"
v8 = { version = "=150.0.0", features = ["simdutf"] }
xmltree = "0.12"

[profile.test]
opt-level = 2
