[package]
name = "katana-document-preview-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "egui implementation of the katana-document-preview trait. MVP backend; swap for custom UI without changing KatanA."

[lib]
path = "src/lib.rs"

[dependencies]
katana-document-preview = { path = "../katana-document-preview", version = "0.1.0" }
egui = { workspace = true }
serde = { workspace = true }
