[package]
name = "katana-document-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "KatanA document viewer artifact, render evaluation, and export foundation."

[lib]
path = "src/lib.rs"

[dependencies]
cosmic-text = { workspace = true }
flate2 = { workspace = true }
image = { workspace = true }
katana-markdown-model = { workspace = true }
katana-render-runtime = { workspace = true }
resvg = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syntect = { workspace = true }
thiserror = { workspace = true }
tiny-skia = { workspace = true }
v8 = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
